[workspace]
members=["crates/*"]

[workspace.dependencies]
actix-web = "4.2.1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres", "uuid", "json", "chrono" ] }
log = "0.4.16"
env_logger = "0.9.0"
config = "0.13"
serde = "1"
serde_json = "1"
dcl-rpc = "2.3.0" 

[profile.release]
strip = true
lto = true
codegen-units = 1
