[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
actix-web = "4.2.1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = [
  "runtime-actix-native-tls",
  "postgres",
  "uuid",
  "json",
  "chrono",
] }
log = "0.4.16"
env_logger = "0.10.0"
config = "0.13"
serde = "1"
serde_json = "1"
dcl-rpc = { version = "2.3.5", features = ["client", "tungstenite"] }
dcl-crypto = "0.2.2"
uuid = { version = "1.2.2", features = ["v4"] }
utoipa = { version = "3.5.0", features = ["actix_extras"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
