[package]
name = "quests_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
dcl-rpc = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
quests_protocol = { path = "../protocol" }
async-trait = "0.1.57"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
futures-util = "0.3"
prost = "0.11.5"
rand = "0.8.5"
reqwest = { version = "0.11.17", features = ["json"] }
serde = "1.0"
clap = { version = "4.2.7", features = ["derive"] }
tungstenite = "0.18"
serde_json = "1.0"
dcl-crypto = { workspace = true }
dcl-crypto-middleware-rs = { version = "0.2.0", features = [
  "ws_signed_headers",
  "signed_fetch",
] }
