[package]
name = "quests_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.61"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
actix-rt = "2"
sqlx = { workspace = true }
uuid = { version = "1.2.2", features = ["v4"] }
utoipa = { workspace = true }
futures-util = { version = "0.3" }

[dev-dependencies]
tokio = { version = "1.24.2", features = ["macros", "test-util"] }
