[package]
name = "quests_message_broker"
version = "0.1.0"
edition = "2021"

[dependencies]
quests_definitions = { path = "../definitions" }
async-trait = "0.1.57"
deadpool-redis = "0.11.0"
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
tokio = { version = "1", features = ["full"] }
quests_db = { path = "../db" }
