[package]
name = "quests_message_broker"
version = "0.1.0"
edition = "2021"

[dependencies]
quests_protocol = { path = "../protocol" }
async-trait = "0.1.57"
deadpool-redis = "0.11.0"
log = { workspace = true }
serde = { workspace = true }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.26"

[dev-dependencies]
uuid = { workspace = true }