[package]
name = "quests_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
daggy = "0.8"
thiserror = "1.0.38"
serde_json = { workspace = true }
prost = "0.11.5"
async-trait = "0.1.57"
dcl-rpc = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
dcl-rpc = { workspace = true }
prost-build = "*"
