[package]
name = "quests_server"
version = "0.1.0"
edition = "2021"

[dependencies]
quests_protocol = { path = "../protocol/" }
quests_db = { path = "../db" }
quests_message_broker = { path = "../message_broker/" }
dcl-rpc = { workspace = true, features = ["warp"] }
actix-web = { workspace = true } 
tokio = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
log = { workspace = true }
dcl-crypto = { workspace = true }
actix-web-prom = "0.6.0"
async-trait = "0.1.57"
tracing = "0.1"
tracing-log = "0.1"
tracing-actix-web = "0.6"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
opentelemetry = { version = "0.17", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = { version = "0.17" }
futures-util = "0.3.25"
actix-web-lab = "0.18.9"
thiserror = "1.0.38"
env_logger = { workspace = true }
utoipa = { version = "3.0.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["actix-web"] }
derive_more = "0.99.17"
openssl = { version = "0.10.45", features = ["vendored"] }
warp = "0.3.3"
tungstenite = "0.19.0"
fastrand = "1.9.0"
uuid = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
