[package]
name = "quests_server"
version = "0.1.0"
edition = "2021"

[dependencies]
quests_system = { path = "../system/" }
quests_protocol = { path = "../protocol/" }
quests_db = { path = "../db" }
quests_message_broker = { path = "../message_broker/" }
dcl-rpc = { workspace = true, features = ["warp"] }
actix-web = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
log = { workspace = true }
dcl-crypto = { workspace = true }
uuid = { workspace = true }

dcl-http-prom-metrics = "0.2.0"
async-trait = "0.1.57"
tracing = "0.1"
tracing-log = "0.1"
tracing-actix-web = "0.6"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
futures-util = "0.3.25"
actix-web-lab = "0.18.9"
thiserror = "1.0.38"
env_logger = { workspace = true }
utoipa = { workspace = true }
utoipa-redoc = { version = "0.1", features = ["actix-web"] }
derive_more = "0.99.17"
warp = "0.3.3"
tungstenite = "0.19.0"
fastrand = "1.9.0"
dcl-crypto-middleware-rs = { version = "0.2.1", features = [
  "ws_signed_headers",
  "signed_fetch",
] }
regex = "1.8.4"
prometheus = { version = "0.13.3", features = ["process"] }
actix-cors = "0.6.4"

[dev-dependencies]
uuid = { workspace = true }
