[package]
name = "quests_system"
version = "0.1.0"
edition = "2021"

[dependencies]
quests_db = { path = "../db" }
quests_message_broker = { path = "../message_broker" }
quests_protocol = { path = "../protocol" }
actix-web = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
async-trait = "0.1.57"
uuid = { version = "1.2.2", features = ["v4"] }
